[gd_scene load_steps=2 format=2]

[ext_resource path="res://interface/VehicleSelection.gd" type="Script" id=1]

[node name="VehicleSelection" type="Control"]
rect_min_size = Vector2( 338, 70 )
script = ExtResource( 1 )

[node name="BackgroundPanel" type="Panel" parent="."]
margin_right = 338.0
margin_bottom = 70.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 280.0
margin_bottom = 70.0

[node name="VehicleCheckbox" type="CheckBox" parent="VBoxContainer"]
margin_right = 117.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0
text = "Vehicle Name"

[node name="AuthorName" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 280.0
margin_bottom = 42.0
text = "     (Author Name)"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 280.0
margin_bottom = 46.0

[connection signal="gui_input" from="BackgroundPanel" to="." method="_on_panel_gui_input"]
[connection signal="gui_input" from="VBoxContainer" to="." method="_on_panel_gui_input"]
